--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
             "autoclose" : true,
             "delay" : 0
         },
+        "softinputMode" : "adjustResize",
         /* 模块配置 */
         "modules" : {},
         /* 应用发布信息 */
