--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,9 @@
         },
         "softinputMode" : "adjustResize",
         /* 模块配置 */
-        "modules" : {},
+        "modules" : {
+            "push" : {}
+        },
         /* 应用发布信息 */
         "distribute" : {
             /* android打包配置 */
